# ai-builder

./: .env.example  .gitignore  ARCHITECTURE.md  PRODUCT.md  README.md  TASKS.md  docker-compose.yml  openapi.yaml
.agents/rules/: architecture-and-contracts.md  backend-python.md  frontend-react.md  memory-protocol.md  project-context.md  security-and-secrets.md  test-files.md  testing-and-quality.md  workflow-and-branching.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: auth.py  deps.py  resumes.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: 3b5c9dc4501d_initial_tables.py  91d587ef7bd3_initial_tables.py
apps/api/app/models/: __init__.py  generated_output.py  master_resume.py  tailoring_request.py  user.py
apps/api/app/schemas/: __init__.py  auth.py  resume.py
apps/api/app/services/: __init__.py  auth_service.py  file_service.py  resume_service.py
apps/api/uploads/3b58e747-9cf5-43bf-83d0-eac8816f77c9/resumes/: 40fbca03-9792-40b8-9d6c-3ced97b61aae.tex
apps/api/uploads/ad689a4f-9631-4750-855b-f70397db145c/resumes/: 63d4c255-48df-4fce-a313-142e8a6ed960.tex
apps/api/uploads/e534b505-5eb3-4195-b3fa-ac5592ff1c10/resumes/: 9f0a66e5-0fb8-4f55-881e-e32e37485f6f.docx
apps/web/: Dockerfile  package-lock.json  package.json
docs/: primer.md
docs/memory/: current-state.md  decisions.md  iteration-log.md  next-actions.md  (+1 more)
(+46 files in other folders)
